@@ -1,9 +1,9 @@
 package com.common.utils;
 
-import sun.misc.BASE64Encoder;
-
+import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 import java.util.Random;
 
 /**
@@ -13,37 +13,40 @@ import java.util.Random;
 public class TokenProcessor {
 
     /**
-     *单例设计模式（饿汉式，保证类的对象在内存中只有一个）
-     *1、把类的构造函数私有
-     *2、自己创建一个类的对象
-     *3、对外提供一个公共的方法，返回类的对象
+     * 单例设计模式（饿汉式，保证类的对象在内存中只有一个）
+     * 1、把类的构造函数私有
+     * 2、自己创建一个类的对象
+     * 3、对外提供一个公共的方法，返回类的对象
      */
-    private TokenProcessor(){}
+    private TokenProcessor() {
+    }
 
     private static final TokenProcessor instance = new TokenProcessor();
 
     /**
      * 返回类的对象
+     *
      * @return
      */
-    public static TokenProcessor getInstance(){
+    public static TokenProcessor getInstance() {
         return instance;
     }
 
     /**
      * 生成Token
      * Token：Nv6RRuGEVvmGjB+jimI/gw==
+     *
      * @return
      */
-    public String makeToken(){  //checkException
+    public String makeToken() {  //checkException
         String token = (System.currentTimeMillis() + new Random().nextInt(999999999)) + "";
         //数据指纹   128位长   16个字节  md5
         try {
             MessageDigest md = MessageDigest.getInstance("md5");
-            byte md5[] =  md.digest(token.getBytes());
+            byte[] md5 = md.digest(token.getBytes());
             //base64编码--任意二进制编码明文字符
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(md5);
+            byte[] encode = Base64.getEncoder().encode(md5);
+            return new String(encode, StandardCharsets.UTF_8);
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
